# Jackis

./: README.md  Ubuntu18.04 JLink 下载固件.md  Ubuntu18.04 Jlink 下载调试 nRF52840.md
BLE/: Android手机获取btsnoop.md  Connection.md  GATT bear.drawio  Proxy protocol & Mesh GATT services.md  Zephyr BLE GATT discover.md  Zephyr BLE Mesh Provisioning.md  Zephyr BLE Mesh 因蓝牙地址导致的错误.md  Zephyr BLE uuid.md  Zephyr BLE 连接.md  Zephyr GATT read write.md  树莓派Bluez获取btsnoop_hci.log.md
BLE/AliGenie/: readme.md
BLE/Android apk/Nordic/: nRF Blinky_v2.5.1_apkpure.com.apk
BLE/Android apk/STM32/: ST BLE Profile_2.0.2.apk
BLE/MiIoT/: readme.md
BLE/btstack/: gap_broadcast.md  gap_broadcaster.md  gap_connect.md  gap_observation.md  gap_observer.md  gap_peripheral.md  gatt_server.md  mesh.md
C/: ARRAY_SIZE.md  daytime.c  hex.c  util.h  va_list.md
C/json-tutorial/: readme.md
ESP32/: PlatformIO - 让你免除搭建环境的烦恼.md  Windows环境下用Jlink调试ESP32.md
SEI_CERT_C_Coding_Standard/Rules/: Rule 02. Declarations and Initialization.md
common/: noncopyable.h
docs/mutex/: mutex.md
docs/noncopyable/: noncopyable.md
examples/: mutex.cc
ini/: ini 文件格式.md
mbestls/: message_digest.md
mbestls/examples/aes_key_generator/: CMakeLists.txt  main.c
muduo/: EventLoop.md  Timestamp.md  muduo库Condition.md  muduo库CountDownLatch.md  muduo库Mutex设计思想.md
muduo/TimerQueue/: TimerQueue.md  TimerQueue.puml
thread/mutex/: mutex.h
tools/: Virtualbox 安装 Ubuntu 20.04.md  virtualbox ubuntu ssh 密钥登录.md
